[project]
name = "amazon-seller-assistant"
version = "0.1.0"
description = "Amazon Content Generation Pipeline - Sequential Multi-Agent System (ADK-Based)"
authors = [
    {name = "xxx",email = "xxx@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
keywords = ["amazon", "content-generation", "ai", "agents", "adk", "google-genai"]
dependencies = [
    "google-genai (>=1.51.0,<2.0.0)",
    "pandas (>=2.0.0)",
    "openpyxl (>=3.1.0)",
    "python-dotenv (>=1.0.0)"
]

[project.scripts]
amazon-content-generator = "main:main"


[tool.poetry]
name = "amazon-seller-assistant"
version = "0.1.0"
description = "Amazon Content Generation Pipeline - Sequential Multi-Agent System (ADK-Based)"
authors = ["Ming Zhang <zhangmingyang@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
amazon-content-generator = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
