[project]
name = "amazon-seller-assistant"
version = "0.1.0"
description = "Amazon Content Generation Pipeline - Sequential Multi-Agent System (ADK-Based)"
authors = [
    {name = "xxx",email = "xxx@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
keywords = ["amazon", "content-generation", "ai", "agents", "adk", "google-genai"]
dependencies = [
    "google-genai (>=1.51.0,<2.0.0)",
    "pandas (>=2.0.0)",
    "openpyxl (>=3.1.0)",
    "python-dotenv (>=1.0.0)",
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[project.scripts]
amazon-content-generator = "main:main"
api-server = "api_server:main"


[tool.poetry]
name = "amazon-seller-assistant"
version = "0.1.0"
description = "Amazon Content Generation Pipeline - Sequential Multi-Agent System (ADK-Based)"
authors = ["Mingyang Zhang <zhangmingyang@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
amazon-content-generator = "main:main"
api-server = "api_server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
